added time and removed some comments

--- a/dataStorage.ipynb
+++ b/dataStorage.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 326,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 327,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 328,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
        "[3457 rows x 4 columns]"
       ]
      },
-     "execution_count": 274,
+     "execution_count": 328,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 329,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +429,7 @@
        "[6840 rows x 8 columns]"
       ]
      },
-     "execution_count": 275,
+     "execution_count": 329,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 330,
    "metadata": {},
    "outputs": [
     {
@@ -728,7 +728,7 @@
        "[2609 rows x 15 columns]"
       ]
      },
-     "execution_count": 276,
+     "execution_count": 330,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 331,
    "metadata": {},
    "outputs": [
     {
@@ -943,7 +943,7 @@
        "[1631 rows x 8 columns]"
       ]
      },
-     "execution_count": 277,
+     "execution_count": 331,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -961,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 332,
    "metadata": {},
    "outputs": [
     {
@@ -989,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 333,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -999,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 334,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1008,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 335,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1018,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 336,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1027,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 337,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1036,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 338,
    "metadata": {},
    "outputs": [
     {
@@ -1203,7 +1203,7 @@
        "[2609 rows x 6 columns]"
       ]
      },
-     "execution_count": 284,
+     "execution_count": 338,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1214,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 339,
    "metadata": {},
    "outputs": [
     {
@@ -1418,7 +1418,7 @@
        "[1631 rows x 8 columns]"
       ]
      },
-     "execution_count": 285,
+     "execution_count": 339,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1429,7 +1429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 340,
    "metadata": {},
    "outputs": [
     {
@@ -1468,14 +1468,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 341,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Elapsed time: 0.010704994201660156 seconds\n"
+      "Elapsed time: 0.01576519012451172 seconds\n"
      ]
     }
    ],
@@ -1492,7 +1492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 342,
    "metadata": {},
    "outputs": [
     {
@@ -1944,7 +1944,7 @@
        "[1062 rows x 20 columns]"
       ]
      },
-     "execution_count": 288,
+     "execution_count": 342,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1962,7 +1962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 343,
    "metadata": {},
    "outputs": [
     {
@@ -2099,32 +2099,32 @@
       "1060    CRI                             19.487766  \n",
       "1061    CRI                             20.024153  \n",
       "\n",
-      "[1062 rows x 20 columns]\n"
+      "[1062 rows x 20 columns]\n",
+      "Elapsed time: 0.5812294483184814 seconds\n"
      ]
     }
    ],
    "source": [
     "from pyspark.sql import SparkSession\n",
     "\n",
+    "start_time = time.time()\n",
     "# Initialize SparkSession\n",
     "spark = SparkSession.builder \\\n",
     "    .appName(\"Merge Datasets\") \\\n",
     "    .getOrCreate()\n",
     "\n",
-    "# Merge dfSalary with dfCost on the common columns\n",
     "merged_df = dfSalary.merge(dfCost, on=['Year', 'Entity'], how='inner')\n",
-    "\n",
-    "# Merge the resulting DataFrame with dfMental on the common columns\n",
     "merged_df = merged_df.merge(dfMental, on=['Year', 'Entity'], how='inner')\n",
-    "\n",
-    "# Merge the resulting DataFrame with dfLabor on the common columns\n",
     "merged_df = merged_df.merge(dfLabor, on=['Year', 'Entity'], how='inner')\n",
-    "\n",
-    "# Show the resulting DataFrame\n",
     "print(merged_df)\n",
     "\n",
     "# Stop SparkSession\n",
     "spark.stop()\n",
+    "\n",
+    "end_time = time.time()\n",
+    "elapsed_time = end_time - start_time\n",
+    "\n",
+    "print(\"Elapsed time:\", elapsed_time, \"seconds\")\n",
     "\n"
    ]
   }
