Fixed country codes, exchange rates not needed since the data is already in USD

--- a/dataStorage.ipynb
+++ b/dataStorage.ipynb
@@ -16,9 +16,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 408,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pandas in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from -r requirements.txt (line 1)) (2.2.0)\n",
+      "Requirement already satisfied: numpy in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from -r requirements.txt (line 2)) (1.26.3)\n",
+      "Requirement already satisfied: pycountry in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from -r requirements.txt (line 3)) (23.12.11)\n",
+      "Requirement already satisfied: pyspark in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from -r requirements.txt (line 4)) (3.5.0)\n",
+      "Requirement already satisfied: python-dotenv in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from -r requirements.txt (line 5)) (1.0.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in /Users/rkeat/Library/Python/3.11/lib/python/site-packages (from pandas->-r requirements.txt (line 1)) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from pandas->-r requirements.txt (line 1)) (2023.3.post1)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from pandas->-r requirements.txt (line 1)) (2024.1)\n",
+      "Requirement already satisfied: py4j==0.10.9.7 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from pyspark->-r requirements.txt (line 4)) (0.10.9.7)\n",
+      "Requirement already satisfied: six>=1.5 in /Users/rkeat/Library/Python/3.11/lib/python/site-packages (from python-dateutil>=2.8.2->pandas->-r requirements.txt (line 1)) (1.16.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install -r requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1e6b6ed0c1684363f4e6e3a1a4dc6364\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import json\n",
@@ -26,12 +61,18 @@
     "import pycountry as pc\n",
     "import time\n",
     "from pyspark.sql import SparkSession\n",
-    "import functools"
+    "from dotenv import load_dotenv\n",
+    "import os\n",
+    "import requests\n",
+    "\n",
+    "load_dotenv()\n",
+    "API_KEY = os.getenv(\"API_KEY\")\n",
+    "print(API_KEY)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 409,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 410,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +216,7 @@
        "[3457 rows x 4 columns]"
       ]
      },
-     "execution_count": 410,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 411,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +470,7 @@
        "[6840 rows x 8 columns]"
       ]
      },
-     "execution_count": 411,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 412,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -728,7 +769,7 @@
        "[2609 rows x 15 columns]"
       ]
      },
-     "execution_count": 412,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -739,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 413,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -943,7 +984,7 @@
        "[1631 rows x 8 columns]"
       ]
      },
-     "execution_count": 413,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -961,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 414,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -976,7 +1017,7 @@
     }
    ],
    "source": [
-    "print(dfSalary.columns)\n"
+    "print(dfSalary.columns)"
    ]
   },
   {
@@ -989,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 415,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -999,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 416,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1008,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 417,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1018,11 +1059,190 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 418,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
     "dfCost.rename(columns={'Date':'Year'}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://api.exchangeratesapi.io/v1/2000-12-12?access_key=1e6b6ed0c1684363f4e6e3a1a4dc6364&symbols=USD,AUD,EUR,CAD,CZK,DKK,HUF,JPY,KRW,NOK,PLN,SEK,CHF,GBP,USD,ILS,MXN,ISK,NZD,CLP,TRY,CRC\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Lets use see the rows that the unit code is empty or NaN\n",
+    "dfSalary[dfSalary['Unit Code'].isna()][\"Entity\"].unique()\n",
+    "#Only Turkey, Colombia and Costa Rica had no unitCode, we will manually add the unit code and country code for these countries\n",
+    "dfSalary.loc[dfSalary['Entity'] == 'Türkiye', 'Unit Code'] = 'TRY'\n",
+    "dfSalary.loc[dfSalary['Entity'] == 'Türkiye', 'Unit'] = 'Turkish Lira'\n",
+    "dfSalary.loc[dfSalary['Entity'] == 'Colombia', 'Unit Code'] = 'COP'\n",
+    "dfSalary.loc[dfSalary['Entity'] == 'Colombia', 'Unit'] = 'Colombian Peso'\n",
+    "dfSalary.loc[dfSalary['Entity'] == 'Costa Rica', 'Unit Code'] = 'CRC'\n",
+    "dfSalary.loc[dfSalary['Entity'] == 'Costa Rica', 'Unit'] = 'Costa Rican Colón'\n",
+    "#Now we dont have any countries without unit code\n",
+    "# dfSalary[dfSalary['Unit Code'].isna()][\"Entity\"].unique()\n",
+    "#Lets use the Unit Code to get the exchange rates for each country\n",
+    "#Lets collect all the Unit Codes for the countries per year\n",
+    "# unitCodesPerYear = {}\n",
+    "# for year in dfSalary['Year'].unique():\n",
+    "#     unitCodesPerYear[year] = dfSalary[dfSalary['Year'] == year]['Unit Code'].unique().tolist()\n",
+    "\n",
+    "# #Lets create a new attribute to store the exchange rate for each country and the converted salary\n",
+    "# dfSalary['Exchange Rate'] = np.nan\n",
+    "# dfSalary['Salary in USD'] = np.nan\n",
+    "\n",
+    "# #Using the api we will get the exchange rates from the coutries currency to USD\n",
+    "# year=2000\n",
+    "# apiUrl = f\"http://api.exchangeratesapi.io/v1/{year}-12-12?access_key={API_KEY}&symbols=USD,{','.join(unitCodesPerYear[year])}\"\n",
+    "# print(apiUrl)\n",
+    "# response = requests.post(apiUrl)\n",
+    "# exchangeRates = response.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Australia - AUD - 46246.8687311857 - 1.62192 - 25063.417970125553\n",
+      "Austria - EUR - 27932.1336265057 - 1 - 24552.26166129763\n",
+      "Belgium - EUR - 31015.7220412343 - 1 - 27262.726627078828\n",
+      "Canada - CAD - 43474.8931344361 - 1.342027 - 28475.060964116165\n",
+      "Czechia - CZK - 173858.189267599 - 34.83886 - 4386.504805026678\n",
+      "Denmark - DKK - 267667.703995458 - 7.464151 - 31521.21504627862\n",
+      "Finland - EUR - 26597.2142706544 - 1 - 23378.871552262408\n",
+      "France - EUR - 25605.9919617516 - 1 - 22507.59011640377\n",
+      "Germany - EUR - 27993.2155365741 - 1 - 24605.95247700202\n",
+      "Greece - EUR - 13901.5875162704 - 1 - 12219.453722039132\n",
+      "Hungary - HUF - 1223604.74863675 - 265.693784 - 4048.0619721139483\n",
+      "Ireland - EUR - 27331.5585014795 - 1 - 24024.357928124977\n",
+      "Italy - EUR - 21254.2592738694 - 1 - 18682.430138953383\n",
+      "Japan - JPY - 4624653.32646199 - 97.984308 - 41486.81031660815\n",
+      "Korea - KRW - 18830753.7127639 - 1044.538861 - 15846.39560984063\n",
+      "Luxembourg - EUR - 40450.0199428042 - 1 - 35555.446179665065\n",
+      "Netherlands - EUR - 32019.4883504916 - 1 - 28145.034201617065\n",
+      "Norway - NOK - 277322.300152391 - 8.087461 - 30141.16171528385\n",
+      "Poland - PLN - 26550.3744023356 - 3.855597 - 6052.940555906073\n",
+      "Portugal - EUR - 12629.8271789129 - 1 - 11101.580200782902\n",
+      "Slovak Republic - EUR - 5429.35745140709 - 1 - 4772.388911714478\n",
+      "Spain - EUR - 18526.3841003138 - 1 - 16284.63604502353\n",
+      "Sweden - SEK - 251428.942621989 - 8.526906 - 25918.578940344887\n",
+      "Switzerland - CHF - 71791.6944930855 - 1.505863 - 41905.99283224216\n",
+      "United Kingdom - GBP - 22017.0469614776 - 0.606796 - 31893.615363314737\n",
+      "United States - USD - 38863.0278199539 - 0.878997 - 38863.0278199539\n",
+      "Israel - ILS - 113428.695034867 - 3.600387 - 27692.434910347973\n",
+      "Slovenia - EUR - 11312.0725721231 - 1 - 9943.277854678488\n",
+      "Estonia - EUR - 4116.87920294707 - 1 - 3618.7244687528655\n",
+      "Australia - AUD - 75223.6949838118 - 1.62192 - 40767.36350725413\n",
+      "Austria - EUR - 44362.1427892733 - 1 - 38994.19042534286\n",
+      "Belgium - EUR - 48890.796319834 - 1 - 42974.863292745125\n",
+      "Canada - CAD - 62530.1726860435 - 1.342027 - 40955.833377804\n",
+      "Czechia - CZK - 297462.508548777 - 34.83886 - 7505.086349749946\n",
+      "Denmark - DKK - 388527.786912901 - 7.464151 - 45753.99923086754\n",
+      "Finland - EUR - 38781.6453825753 - 1 - 34088.94994634754\n",
+      "France - EUR - 34537.094843516 - 1 - 30358.002756166035\n",
+      "Germany - EUR - 39598.6685392586 - 1 - 34807.1108500027\n",
+      "Greece - EUR - 18550.87597475 - 1 - 16306.164329177327\n",
+      "Hungary - HUF - 3353561.43210804 - 265.693784 - 11094.615740572504\n",
+      "Ireland - EUR - 38401.824156971 - 1 - 33755.08822850504\n",
+      "Italy - EUR - 31807.9745062168 - 1 - 27959.11416704105\n",
+      "Japan - JPY - 4513792.65133843 - 97.984308 - 40492.30208523314\n",
+      "Korea - KRW - 30651087.2668639 - 1044.538861 - 25793.404879659687\n",
+      "Luxembourg - EUR - 62069.4480843888 - 1 - 54558.8586578335\n",
+      "Netherlands - EUR - 49661.9618871318 - 1 - 43652.715512903196\n",
+      "Norway - NOK - 442920.282885 - 8.087461 - 48139.4098710419\n",
+      "Poland - PLN - 48794.1758863708 - 3.855597 - 11124.070856366026\n",
+      "Portugal - EUR - 19720.6052949358 - 1 - 17334.352892432686\n",
+      "Slovak Republic - EUR - 10763.4855241763 - 1 - 9461.071485294395\n",
+      "Spain - EUR - 29228.5836861278 - 1 - 25691.83737435528\n",
+      "Sweden - SEK - 360439.352512817 - 8.526906 - 37155.92848574954\n",
+      "Switzerland - CHF - 77365.9651590257 - 1.505863 - 45159.786299874635\n",
+      "United Kingdom - GBP - 33883.1188922272 - 0.606796 - 49082.656868059494\n",
+      "United States - USD - 61131.5991879978 - 0.878997 - 61131.5991879978\n",
+      "Israel - ILS - 157503.07835819 - 3.600387 - 38452.73671069636\n",
+      "Slovenia - EUR - 20954.0911672993 - 1 - 18418.583273782584\n",
+      "Estonia - EUR - 9495.70652358139 - 1 - 8346.697547108472\n",
+      "Australia - USD - 48213.0886758407 - 0.878997 - 48213.0886758407\n",
+      "Austria - USD - 57529.017471462 - 0.878997 - 57529.017471462\n",
+      "Belgium - USD - 60929.1405210416 - 0.878997 - 60929.140521041605\n",
+      "Canada - USD - 46526.3392846538 - 0.878997 - 46526.3392846538\n",
+      "Czechia - USD - 20070.4824207018 - 0.878997 - 20070.4824207018\n",
+      "Denmark - USD - 52018.8800522512 - 0.878997 - 52018.8800522512\n",
+      "Finland - USD - 43072.8440388183 - 0.878997 - 43072.8440388183\n",
+      "France - USD - 43694.3469153401 - 0.878997 - 43694.3469153401\n",
+      "Germany - USD - 51344.1011892339 - 0.878997 - 51344.1011892339\n",
+      "Greece - USD - 29797.165441595 - 0.878997 - 29797.165441595\n",
+      "Hungary - USD - 17968.8940022678 - 0.878997 - 17968.8940022678\n",
+      "Ireland - USD - 37873.9303720957 - 0.878997 - 37873.9303720957\n",
+      "Italy - USD - 45289.5844590666 - 0.878997 - 45289.5844590666\n",
+      "Japan - USD - 41428.2368740179 - 0.878997 - 41428.2368740179\n",
+      "Korea - USD - 32242.6420334454 - 0.878997 - 32242.6420334454\n",
+      "Luxembourg - USD - 64217.0944540361 - 0.878997 - 64217.0944540361\n",
+      "Netherlands - USD - 60062.6401102152 - 0.878997 - 60062.6401102152\n",
+      "Norway - USD - 36444.1966293975 - 0.878997 - 36444.1966293975\n",
+      "Poland - USD - 23769.6120023227 - 0.878997 - 23769.6120023227\n",
+      "Portugal - USD - 30975.0102916494 - 0.878997 - 30975.0102916494\n",
+      "Slovak Republic - USD - 16381.1268031448 - 0.878997 - 16381.126803144802\n",
+      "Spain - USD - 43029.08323482 - 0.878997 - 43029.08323482\n",
+      "Sweden - USD - 37650.8104279534 - 0.878997 - 37650.8104279534\n",
+      "Switzerland - USD - 60767.7071013052 - 0.878997 - 60767.70710130519\n",
+      "United Kingdom - USD - 44967.0915412984 - 0.878997 - 44967.0915412984\n",
+      "United States - USD - 61131.5991879978 - 0.878997 - 61131.5991879978\n",
+      "Mexico - MXN - 73705.7050489727 - 8.322666 - 7784.415909629422\n",
+      "Mexico - MXN - 206568.907163649 - 8.322666 - 21816.741136809527\n",
+      "Mexico - USD - 17310.5804071391 - 0.878997 - 17310.5804071391\n",
+      "Israel - USD - 37781.7249640523 - 0.878997 - 37781.7249640523\n",
+      "Slovenia - USD - 33203.2334923921 - 0.878997 - 33203.2334923921\n",
+      "Estonia - USD - 14253.9989610863 - 0.878997 - 14253.9989610863\n",
+      "OECD countries - USD - 45489.4933493597 - 0.878997 - 45489.4933493597\n",
+      "Iceland - ISK - 3472001.13584627 - 76.489375 - 39899.37925895543\n",
+      "Iceland - ISK - 9435437.07607371 - 76.489375 - 108429.71175483605\n",
+      "Iceland - USD - 57007.8951731124 - 0.878997 - 57007.8951731124\n",
+      "New Zealand - NZD - 38144.5569337542 - 2.078061 - 16134.72901473977\n",
+      "New Zealand - NZD - 57780.4791798341 - 2.078061 - 24440.50865573082\n",
+      "New Zealand - USD - 36451.9332869269 - 0.878997 - 36451.9332869269\n",
+      "Chile - CLP - 4410850.39956582 - 506.365593 - 7656.768789713477\n",
+      "Chile - CLP - 10246280.7284364 - 506.365593 - 17786.457346151896\n",
+      "Chile - USD - 20514.9086069056 - 0.878997 - 20514.9086069056\n",
+      "Latvia - EUR - 3067.72955908892 - 1 - 2696.5250792504835\n",
+      "Latvia - EUR - 7839.6650192154 - 1 - 6891.04203289528\n",
+      "Latvia - USD - 13406.7065256231 - 0.878997 - 13406.7065256231\n",
+      "Lithuania - EUR - 4757.69551735305 - 1 - 4182.000086666779\n",
+      "Lithuania - EUR - 9398.72130455631 - 1 - 8261.447830541083\n",
+      "Lithuania - USD - 17102.376015679 - 0.878997 - 17102.376015679\n",
+      "Türkiye - TRY - 4486.59574456929 - 0.603835 - 6531.095745839794\n",
+      "Türkiye - TRY - 110101.214575476 - 0.603835 - 160273.3152404211\n",
+      "Costa Rica - CRC - 1782468.91736297 - 280.223159 - 5591.203940982261\n",
+      "Costa Rica - CRC - 7040275.23968986 - 280.223159 - 22083.759375725498\n",
+      "Costa Rica - CRC - 18159.5106498901 - 280.223159 - 56.96229904653045\n"
+     ]
+    }
+   ],
+   "source": [
+    "# #Taking into consideration the API limitations, we have to base our analysis in euros, exchange them for dollars and reconvert them to the coutries currrency\n",
+    "# USD = exchangeRates['rates']['USD']\n",
+    "# for row in dfSalary[dfSalary['Year'] == year].iterrows():\n",
+    "#     entity = row[1]['Entity']\n",
+    "#     unitCode = row[1]['Unit Code']\n",
+    "#     salary = row[1]['Value']\n",
+    "#     exchangeRate = exchangeRates['rates'][unitCode]\n",
+    "#     salaryInUSD = salary / exchangeRate\n",
+    "#     salaryInUSD = salaryInUSD * USD\n",
+    "#     print(f\"{entity} - {unitCode} - {salary} - {exchangeRate} - {salaryInUSD}\")"
    ]
   },
   {
@@ -2021,7 +2241,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
